--- a/assignment-12/assignment12.html
+++ b/assignment-12/assignment12.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
   <head>
+    <title> assignment-12</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <link rel="stylesheet" href="../bootstrap/bootstrap.min.css" />
@@ -12,11 +13,11 @@
   </head>
 
   <body>
-    <div class="container">
+    <!--<div class="container">-->
 
-      <div class="row row-1 d-flex d-md-none ">
+    <!--div class="row row-1 d-flex d-md-none ">
         <div class="col-6">
-          <img class="image-1" src="assets/logo-gmail.png"> &nbsp;Gmail
+          <img class="image-1" src="assets/logo-gmail.png" alt="logo gmail"> &nbsp;Gmail
         </div>
         <div class="col-2"></div>
         <div class="col-4">
@@ -30,237 +31,113 @@
         <div class="col-3 ">
           <p class="float">SIGN IN</p>
         </div>
+      </div>-->
+    <!--div class="landing-section">
+      <div class=" left-item ">
+        <h2>Get more done with Gmail</h2>
+        <p>Now more secure,smarter and easier to use-helping you save time and do more with your inbox</p>
+        <a href=" " class="btn btn-primary ">create an account</a>
       </div>
-      <div class="row row-3 d-flex d-md-none">
-        <div class="col-12">
-          <h2>Get more done with gmail</h2>
-          <p>Now more secure,smarter and easier to use-helping you save time and do more with your inbox</p>
-          <img class="image-2" src="assets/landing-page-image-mobile.png">
-        </div>
-        <div class="col-12">
-          <a href="default.asp" class="btn1" target="blank">get gmail</a>
+      <img class="landing-section-image " src="assets/landing-page-image-desktop.png " alt="landing-image ">
+    </div>-->
 
-        </div>
+    <!--</div>
       </div>
-      <div class="row row-4 d-flex d-md-none">
-        <div class="col-12">
+      <div class="row row-4 d-flex d-md-none ">
+        <div class="col-12 ">
           <h2>EXperience Gmail on any device</h2>
           <p>The ease and simplicity of gmail,wherever you are</p>
         </div>
-        <div class="col-6 shrink">
-          <img class="image-3" src="assets/google-playstore.png">
+        <div class="col-6 shrink ">
+          <img class="image-3 " src="assets/google-playstore.png " alt=" google-playstore ">
         </div>
-        <div class="col-6 shrink">
-          <img class="image-3" src="assets/app-store.png">
+        <div class="col-6 shrink ">
+          <img class="image-3 " src="assets/app-store.png " alt="app-store ">
         </div>
-        <div class="col-12">
-          <img class="image-4" src="assets/experience-image-mobile-desktop.png">
+        <div class="col-12 ">
+          <img class="image-4 " src="assets/experience-image-mobile-desktop.png " alt=" experience logo ">
         </div>
-      </div>
-      <div class="row row-5 d-flex d-md-none">
-        <div class="col-12">
+      </div>-->
+    <!--1div class="row row-5 d-flex d-md-none ">
+      <div class="col-12 mobile-edit ">
+        <div class="textpadding ">
           <h2>Stay organised instantly</h2>
           <p>see whats new at a glance and decide what yoou want to read and respond to</p>
-          <img class="image-5" src="assets/stay-organised-instantly-mobile.png">
+          <img class="image-5 " src="assets/stay-organised-instantly-mobile.png " alt="stay ">
         </div>
       </div>
-      <div class="row row-6 d-flex d-md-none">
-        <div class="col-12">
+
+      <div class="col-12 mobile-edit ">
+        <div class="textpadding ">
           <h2>Never drop the ball</h2>
           <p>get nudges that remind you to follow up and respond to messages,so that nothing slips through the cracks</p>
-          <img class="image-5" src="assets/never-drop-the-ball-mobile.png">
+          <img class="image-5 " src="assets/never-drop-the-ball-mobile.png " alt="never-drop ">
         </div>
       </div>
-      <div class="row row-7 d-flex d-md-none">
-        <div class="col-12">
-          <h2>Take action right from the inbox</h2>
-          <p>View attachments,rsvp to events,snooze messages and more without opening any emails</p>
-          <img class="image-5" src="assets/take-action-mobile.png">
-        </div>
-      </div>
-
-      <div class="row row-8 d-flex d-md-none">
-        <div class="col-12">
-          <h2> Avoid suspicious emails</h2>
-          <p>Gmail blocks 99.9% of dangerous emails before they reach you. If we think something seems phish-y you'll get a warning</p>
-          <img class="image-5" src="assets/avoid-suspicious-emails-mobile.png">
-        </div>
-      </div>
-      <div class="row row-9 d-flex d-md-none">
-        <div class="col-12">
-          <img class="image-6" src="assets/logo-gmail.png">
-          <h3> get started with Gmail</h3>
-          <a href="default.asp" class="btn1" target="blank">get gmail</a>
-        </div>
-      </div>
-      <!--div class="row row-10 d-flex d-md-none">
-        <div class="col-12">
-          <h6> Google</h6>
-        </div>
-        <div class="col-2">
-          <p>Privacy</p>
-        </div>
-        <div class="col-2">
-          <p>Terms</p>
-        </div>
-        <div class="col-4">
-          <p>About Google</p>
-        </div>
-        <div class="col-4">
-          <p>Google Products</p>
-        </div>
-        <div class="col-12">
-          <p>Our policy</p>
-        </div>
-        <div class="col-1">
-          <img src="assets/question-mark.png">
-        </div>
-        <div class="col-3">
-          <p>Help</p>
-        </div>
-        <div class="col-3">
-          <p>English(India)</p>
-        </div>
-        <div class="col-3"></div>
-      </div>-->
-      <div class="d-block d-md-none">
-        <ul>
-          <li class="li d-block">
-            <a href="#">google</a>
-          </li>
-          <li class="li d-inline-block">
-            <a href="#">privacy</a>
-          </li>
-          <li class="li d-inline-block">
-            <a href="#">terms</a>
-          </li>
-          <li class="li d-inline-block">
-            <a href="#">about google</a>
-          </li>
-          <li class="li d-inline-block">
-            <a href="#">google products</a>
-          </li>
-          <li class="li d-inline-block">
-            <a href="#">our policy</a>
-          </li>
-          <li class="li d-inline-block">
-            <a href=""><img src="assets/question-mark.png" style="width: 20px;height: 20px;">  Help</img></a>
-          </li>
-          <li class="li d-inline-block">
-            <a href="#">English (India)</a>
-          </li>
-
-        </ul>
-
-      </div>
-    </div>
-
-
-
-    <!--for *ipad-->
-
-    <div class="row d-none d-md-flex">
-      <div class="col-6">
-        <img class="image-1" src="assets/logo-gmail.png"> &nbsp;Gmail
-      </div>
-      <div class="col-2">
-        <p>FOR WORK</p>
-      </div>
-      <div class="col-2">
-        <p>SIGN IN</p>
-      </div>
-      <div class="col-2">
-        <a href="default.asp" class="btn1 float" target="blank">create an account</a>
-      </div>
-    </div>
-    <div class="row row-11 d-none d-md-flex padd">
-      <div class="col-6 column1 ">
-        <center>
-          <h2>Get more done with gmail</h2>
-          <p>Now more secure,smarter and easier to use-helping you save time and do more with your inbox</p>
-        </center>
-
-      </div>
-      <div class="col-6  column2">
-        <img src="assets/landing-page-image-desktop.png" height=385px width=390px>
-      </div>
-    </div>
-    <div class="row row-12 d-none d-md-flex">
-      <div class="col-12">
-        <h2>EXperience Gmail on any device</h2>
-        <p>The ease and simplicity of gmail,wherever you are</p>
-      </div>
-      <div class="col-6 shrink">
-        <img class="image-3" src="assets/google-playstore.png">
-      </div>
-      <div class="col-6 shrink">
-        <img class="image-3" src="assets/app-store.png">
-      </div>
-      <div class="col-12">
-        <img src="assets/experience-image-mobile-desktop.png" height=480px width=950px>
-      </div>
-    </div>
-    <div class="row row-13 d-none d-md-flex">
-      <div class="col-6 bg  ">
-        <h2>Stay organised instantly</h2><br>
-        <p>see whats new at a glance and decide what yoou want to read and respond to</p>
-        <img src="assets/stay-organised-instantly-desktop.png" style="width: 100%;height: 150px;"></img>
-      </div>
-      <div class="col-6 bg">
-        <h2>Never drop the ball</h2><br>
-        <p>get nudges that remind you to follow up and respond to messages,so that nothing slips through the cracks</p>
-        <img src="assets/never-drop-the-ball-desktop.png" style="height:150px; width: 100%;"></img>
-      </div>
-    </div>
-    <div class=" row row-14 d-none d-md-flex margin ">
-      <div class="col-6 padding ">
+    </div>-->
+    <!--class="row row-7 d-flex d-md-none ">
+      <div class="col-12 ">
         <h2>Take action right from the inbox</h2>
         <p>View attachments,rsvp to events,snooze messages and more without opening any emails</p>
+        <img class="image-5 " src="assets/take-action-mobile.png " alt="take ">
       </div>
-      <div class="col-6 "> <img src="assets/take-action-desktop.png " height=150px width=350px></div>
+    </div>-->
+    <!--  <div class="row row-7 textpadding ">
+      <h2 class="col-12 ">Take action from the right inbox</h2>
+      <p class="col-12 ">View attachments,rsvp to events,snooze messages and more without opening any emails</p>
+      <img class="col-12 " src="assets/take-action-mobile.png " alt=" img ">
     </div>
-    <div class="row row-15 d-none d-md-flex margin ">
-      <div class="col-6 right bg "><img class="image-5 " src="assets/avoid-suspicious-emails-mobile.png "></div>
+    <div class="row row-8 textpadding ">
+      <h2 class="col-12 "> Avoid suspicious emails</h2>
+      <p class="col-12 ">Gmail blocks 99.9% of dangerous emails before they reach you. If we think something seems phish-y you'll get a warning</p>
+      <img src="assets/avoid-suspicious-emails-mobile.png " alt=" img " class="col-12 ">
+    </div>
 
-      <div class="col-6 padding bg ">
+    <!--1div class="row row-8 d-flex d-md-none ">
+      <div class="col-12 ">
         <h2> Avoid suspicious emails</h2>
         <p>Gmail blocks 99.9% of dangerous emails before they reach you. If we think something seems phish-y you'll get a warning</p>
+        <img class="image-5 " src="assets/avoid-suspicious-emails-mobile.png " alt="avoid ">
       </div>
-    </div>
-    <div class="row row-16 d-none d-md-flex ">
+    </div>-->
+    <!--div class="row row-9 textpadding d-flex d-md-none ">
       <div class="col-12 ">
-        <img class="image-6 margin " src="assets/logo-gmail.png ">
-        <h3 class="margin ">get started with Gmail</h3>
-        <a href="default.asp " class="btn1 " target="blank ">get gmail</a>
+        <img class="image-6 " src="assets/logo-gmail.png " alt="logo-gmail ">
+        <h3> get started with Gmail</h3>
+        <div class="col-12 "><a href="default.asp " class="btn btn-primary " target="blank ">get gmail</a></div>
       </div>
     </div>
-    <!--div class="row row-17 d-none d-md-flex ">
-          <div class="col-12 ">
-            <h6> Google</h6>
-          </div>
-          <div class="col-1 ">
-            <p>Privacy</p>
-          </div>
-          <div class="col-1 ">
-            <p>Terms</p>
-          </div>
-          <div class="col-2 ">
-            <p>About Google</p>
-          </div>
-          <div class="col-2 ">
-            <p>Google Products</p>
-          </div>
-          <div class="col-2 ">
-            <p>Our policy</p>
-          </div>
-          <div class="col-2 ">
-            <img src="assets/question-mark.png ">help
-          </div>
-
-          <div class="col-2 ">
-            <p>English(India)</p>
-          </div>-->
-    <div class="d-none d-md-block ">
+    <div class="row row-10 textpadding d-flex d-md-none ">
+      <div class="col-12 ">
+        <h6> Google</h6>
+      </div>
+      <div class="col-2 ">
+        <p>Privacy</p>
+      </div>
+      <div class="col-2 ">
+        <p>Terms</p>
+      </div>
+      <div class="col-4 ">
+        <p>About Google</p>
+      </div>
+      <div class="col-4 ">
+        <p>Google Products</p>
+      </div>
+      <div class="col-12 ">
+        <p>Our policy</p>
+      </div>
+      <div class="col-1 ">
+        <img src="assets/question-mark.png ">
+      </div>
+      <div class="col-3 ">
+        <p>Help</p>
+      </div>
+      <div class="col-3 ">
+        <p>English(India)</p>
+      </div>
+      <div class="col-3 "></div>
+    </div>
+    <!--div class="d-block d-md-none ">
       <ul>
         <li class="li d-block ">
           <a href="# ">google</a>
@@ -281,7 +158,7 @@
           <a href="# ">our policy</a>
         </li>
         <li class="li d-inline-block ">
-          <a href=" "><img src="assets/question-mark.png " style="width: 20px;height: 20px; ">  Help</img></a>
+          <a href=" "><img src="assets/question-mark.png " style="width: 20px;height: 20px; " alt="question ">Help</a>
         </li>
         <li class="li d-inline-block ">
           <a href="# ">English (India)</a>
@@ -290,10 +167,147 @@
       </ul>
 
     </div>
+    </div>-->
 
 
 
+
+    <div class="row d-none d-md-flex borderbox ">
+      <div class="col-6 ">
+        <img class="image-1 " src="assets/logo-gmail.png " alt=" logo-gmail "> &nbsp;Gmail>
+      </div>
+      <div class="col-2 ">
+        <p>FOR WORK</p>
+      </div>
+      <div class="col-2 ">
+        <p>SIGN IN</p>
+      </div>
+      <div class="col-2 ">
+        <a href="default.asp " class="btn1 float " target="blank ">create an account</a>
+      </div>
     </div>
+    <div class="row row-11 d-none d-md-flex padd ">
+      <div class="col-6 column1 ">
+        <center>
+          <h2>Get more done with gmail</h2>
+          <p>Now more secure,smarter and easier to use-helping you save time and do more with your inbox</p>
+        </center>
+
+      </div>
+      <div class="col-6 column2 ">
+        <img src="assets/landing-page-image-desktop.png " height=385px width=390px>
+      </div>
+    </div>
+    <div class="row row-12 d-none d-md-flex ">
+      <div class="col-12 ">
+        <h2>EXperience Gmail on any device</h2>
+        <p>The ease and simplicity of gmail,wherever you are</p>
+      </div>
+      <div class="col-6 shrink ">
+        <img class="image-3 " src="assets/google-playstore.png ">
+      </div>
+      <div class="col-6 shrink ">
+        <img class="image-3 " src="assets/app-store.png ">
+      </div>
+      <div class="col-12 ">
+        <img src="assets/experience-image-mobile-desktop.png " height=480px width=950px>
+      </div>
+    </div>
+    <div class="row row-5 d-none d-md-flex ">
+      <div class="col-12 text-md-left col-md-6 mobile-edit ">
+        <div class="textpadding ">
+          <h2>Stay organised instantly</h2>
+          <p>see whats new at a glance and decide what yoou want to read and respond to</p>
+          <img class="image-5 " src="assets/stay-organised-instantly-desktop.png " alt="stay ">
+        </div>
+      </div>
+
+      <div class="col-12 text-md-left col-md-6 mobile-edit ">
+        <div class="textpadding ">
+          <h2>Never drop the ball</h2>
+          <p>get nudges that remind you to follow up and respond to messages,so that nothing slips through the cracks</p>
+          <img class="image-5 " src="assets/never-drop-the-ball-desktop.png " alt="never-drop ">
+        </div>
+      </div>
+    </div>
+    <div class=" row row-14 d-none d-md-flex take-action">
+      <div class="col-6 ">
+        <h2>Take action right from the inbox</h2>
+        <p>View attachments,rsvp to events,snooze messages and more without opening any emails</p>
+      </div>
+      <div class="col-6 "><img src="assets/take-action-desktop.png " alt=" take " height=150px width=350px></div>
+    </div>
+    <div class="row row-15 d-none d-md-flex avoid-suspicious">
+      <div class="col-6 right bg "><img class="image-5 " src="assets/avoid-suspicious-emails-desktop.png " alt="avoid "></div>
+
+      <div class="col-6 bg ">
+        <h2> Avoid suspicious emails</h2>
+        <p>Gmail blocks 99.9% of dangerous emails before they reach you. If we think something seems phish-y you'll get a warning</p>
+      </div>
+    </div>
+    <div class="row row-16 d-none d-md-flex ">
+      <div class="col-12 ">
+        <img class="image-6 margin " src="assets/logo-gmail.png ">
+        <h3 class="margin ">get started with Gmail</h3>
+        <a href="default.asp " class="btn1 " target="blank ">get gmail</a>
+      </div>
+    </div>
+    <div class="row row-17 d-none d-md-flex ">
+      <div class="col-12 ">
+        <h6> Google</h6>
+      </div>
+      <div class="col-1 ">
+        <p>Privacy</p>
+      </div>
+      <div class="col-1 ">
+        <p>Terms</p>
+      </div>
+      <div class="col-2 ">
+        <p>About Google</p>
+      </div>
+      <div class="col-2 ">
+        <p>Google Products</p>
+      </div>
+      <div class="col-2 ">
+        <p>Our policy</p>
+      </div>
+      <div class="col-2 ">
+        <img src="assets/question-mark.png ">help
+      </div>
+
+      <div class="col-2 ">
+        <p>English(India)</p>
+      </div>
+      <div class="d-none d-md-block ">
+        <ul>
+          <li class="li d-block ">
+            <a href="# ">google</a>
+          </li>
+          <li class="li d-inline-block ">
+            <a href="# ">privacy</a>
+          </li>
+          <li class="li d-inline-block ">
+            <a href="# ">terms</a>
+          </li>
+          <li class="li d-inline-block ">
+            <a href="# ">about google</a>
+          </li>
+          <li class="li d-inline-block ">
+            <a href="# ">google products</a>
+          </li>
+          <li class="li d-inline-block ">
+            <a href="# ">our policy</a>
+          </li>
+          <li class="li d-inline-block ">
+            <a href=" "><img src="assets/question-mark.png " style="width: 20px;height: 20px; ">  Help</img></a>
+          </li>
+          <li class="li d-inline-block ">
+            <a href="# ">English (India)</a>
+          </li>
+
+        </ul>
+
+      </div>
   </body>
 
 </html>
